--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "turbowalk": "Nexus-Mods/node-turbowalk",
     "typescript": "^3.7.2",
     "vortex-api": "Nexus-Mods/vortex-api",
-    "webpack": "^4.35.0"
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.10",
+    "winapi-bindings": "Nexus-Mods/node-winapi-bindings"
   },
   "dependencies": {
     "libxmljs": "^0.19.7"
