--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ts-loader": "^6.0.4",
     "turbowalk": "Nexus-Mods/node-turbowalk",
     "typescript": "^3.7.2",
-    "vortex-api": "Nexus-Mods/vortex-api",
+    "vortex-api": "Nexus-Mods/vortex-api#electron7",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.10",
     "winapi-bindings": "Nexus-Mods/node-winapi-bindings"
