fixed game store filtering valid game entries
- Bumped version to 0.1.0 (semver hates 0.0.X)
- We no longer specify encoding when parsing manifests as libxmljs
  should be able to ascertain the encoding of the file on its own.
- Removed faulty manifest filtering functionality

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gamestore-origin",
-  "version": "0.0.5",
-  "description": "Discovery and game launch support for the Origin game store",
+  "version": "0.1.0",
+  "description": "Discovery and game launch support for the Origin/EA game store",
   "main": "./out/index.js",
   "repository": "",
   "scripts": {
