--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamestore-origin",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "description": "Discovery and game launch support for the Origin/EA game store",
   "main": "./out/index.js",
   "repository": "",
@@ -11,7 +11,7 @@
   "author": "Black Tree Gaming Ltd.",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@types/xml2js": "^0.4.11",
+    "@types/libxmljs": "^0.18.4",
     "bluebird": "^3.5.0",
     "ts-loader": "^6.0.4",
     "turbowalk": "Nexus-Mods/node-turbowalk",
@@ -19,7 +19,6 @@
     "vortex-api": "Nexus-Mods/vortex-api",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.10",
-    "winapi-bindings": "Nexus-Mods/node-winapi-bindings",
-    "xml2js": "^0.4.23"
+    "winapi-bindings": "Nexus-Mods/node-winapi-bindings"
   }
 }
