--- a/package.json
+++ b/package.json
@@ -5,20 +5,16 @@
   "main": "./out/index.js",
   "repository": "",
   "scripts": {
-    "webpack": "node ./node_modules/webpack/bin/webpack --config webpack.config.js --display-error-details --progress --profile --color",
+    "webpack": "node ./node_modules/webpack/bin/webpack --config webpack.config.js --progress --profile --color",
     "build": "npm run webpack && extractInfo"
   },
   "author": "Black Tree Gaming Ltd.",
   "license": "GPL-3.0",
   "devDependencies": {
     "@types/libxmljs": "^0.18.4",
-    "bluebird": "^3.5.0",
-    "ts-loader": "^6.0.4",
     "turbowalk": "Nexus-Mods/node-turbowalk",
     "typescript": "^4.4.3",
-    "vortex-api": "Nexus-Mods/vortex-api",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.10",
+    "vortex-ext-dependencies": "Nexus-Mods/vortex-ext-dependencies",
     "winapi-bindings": "Nexus-Mods/node-winapi-bindings"
   }
 }
